mysqldatabase/cdk.out/MysqldatabaseStack.template.json
{
  "Resources": {
    "vpcA2121C38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.0.0/24",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/Resource"
      }
    },
    "vpcpublicSubnet1SubnetA635257E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.0/26",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet1/Subnet"
      }
    },
    "vpcpublicSubnet1RouteTableA38152FE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet1/RouteTable"
      }
    },
    "vpcpublicSubnet1RouteTableAssociationB46101B8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet1RouteTableA38152FE"
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet1SubnetA635257E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet1/RouteTableAssociation"
      }
    },
    "vpcpublicSubnet1DefaultRouteF0973989": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet1RouteTableA38152FE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet1/DefaultRoute"
      }
    },
    "vpcpublicSubnet1EIP909BE2D3": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet1/EIP"
      }
    },
    "vpcpublicSubnet1NATGateway974E731F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "vpcpublicSubnet1SubnetA635257E"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcpublicSubnet1EIP909BE2D3",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet1/NATGateway"
      }
    },
    "vpcpublicSubnet2Subnet027D165B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.64/26",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet2/Subnet"
      }
    },
    "vpcpublicSubnet2RouteTableA6135437": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet2/RouteTable"
      }
    },
    "vpcpublicSubnet2RouteTableAssociation73F6478A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet2RouteTableA6135437"
        },
        "SubnetId": {
          "Ref": "vpcpublicSubnet2Subnet027D165B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet2/RouteTableAssociation"
      }
    },
    "vpcpublicSubnet2DefaultRoute13685A07": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcpublicSubnet2RouteTableA6135437"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "DependsOn": [
        "vpcVPCGW7984C166"
      ],
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/publicSubnet2/DefaultRoute"
      }
    },
    "vpcprivateSubnet1SubnetAE1393DC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.128/26",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet1/Subnet"
      }
    },
    "vpcprivateSubnet1RouteTableC1CE9D76": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet1/RouteTable"
      }
    },
    "vpcprivateSubnet1RouteTableAssociationD9FC1FAE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet1RouteTableC1CE9D76"
        },
        "SubnetId": {
          "Ref": "vpcprivateSubnet1SubnetAE1393DC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet1/RouteTableAssociation"
      }
    },
    "vpcprivateSubnet1DefaultRoute22F06BF9": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet1RouteTableC1CE9D76"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcpublicSubnet1NATGateway974E731F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet1/DefaultRoute"
      }
    },
    "vpcprivateSubnet2Subnet1C8B0CEE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.192/26",
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet2/Subnet"
      }
    },
    "vpcprivateSubnet2RouteTable882A110C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet2/RouteTable"
      }
    },
    "vpcprivateSubnet2RouteTableAssociationF1D5617F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet2RouteTable882A110C"
        },
        "SubnetId": {
          "Ref": "vpcprivateSubnet2Subnet1C8B0CEE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet2/RouteTableAssociation"
      }
    },
    "vpcprivateSubnet2DefaultRouteF7D5A1BD": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcprivateSubnet2RouteTable882A110C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcpublicSubnet1NATGateway974E731F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/privateSubnet2/DefaultRoute"
      }
    },
    "vpcIGWE57CBDCA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "MysqldatabaseStack/vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/IGW"
      }
    },
    "vpcVPCGW7984C166": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcA2121C38"
        },
        "InternetGatewayId": {
          "Ref": "vpcIGWE57CBDCA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/vpc/VPCGW"
      }
    },
    "MysqldatabaseStackdbSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "db subnet group",
        "SubnetIds": [
          {
            "Ref": "vpcprivateSubnet1SubnetAE1393DC"
          },
          {
            "Ref": "vpcprivateSubnet2Subnet1C8B0CEE"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/MysqldatabaseStack-dbSubnetGroup/Default"
      }
    },
    "MysqldatabaseStackDbSecurityGroup322BE505": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "MysqldatabaseStack/MysqldatabaseStack-DbSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "vpcA2121C38",
                "CidrBlock"
              ]
            },
            "Description": "allow rds from within vpc network",
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          },
          {
            "CidrIp": "172.11.0.0/16",
            "Description": "allow rds from eks network",
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          }
        ],
        "VpcId": {
          "Ref": "vpcA2121C38"
        }
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/MysqldatabaseStack-DbSecurityGroup/Resource"
      }
    },
    "MysqldatabaseStackdbSecret751CD9E9": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "password",
          "IncludeSpace": false,
          "SecretStringTemplate": "{\"username\":\"mydbuser\"}"
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/MysqldatabaseStack-dbSecret/Resource"
      }
    },
    "MysqldatabaseStackdbSecretAttachment204A90BF": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "MysqldatabaseStackdbSecret751CD9E9"
        },
        "TargetId": {
          "Ref": "rds3515897F"
        },
        "TargetType": "AWS::RDS::DBInstance"
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/MysqldatabaseStack-dbSecret/Attachment/Resource"
      }
    },
    "rds3515897F": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceClass": "db.t3.small",
        "AllocatedStorage": "5",
        "CopyTagsToSnapshot": true,
        "DBInstanceIdentifier": "mysqldatabasestack-mysql-database",
        "DBName": "mydb",
        "DBSubnetGroupName": {
          "Ref": "MysqldatabaseStackdbSubnetGroup"
        },
        "DeleteAutomatedBackups": true,
        "Engine": "mysql",
        "EngineVersion": "5.7.30",
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "MysqldatabaseStackdbSecret751CD9E9"
              },
              ":SecretString:username::}}"
            ]
          ]
        },
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "MysqldatabaseStackdbSecret751CD9E9"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "StorageType": "gp2",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "MysqldatabaseStackDbSecurityGroup322BE505",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/rds/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/12RQW/CMAyFf8vuaTY4jF1ZmVAvo2oR18lNDQu0SZU4IFT1vy9toK128vOXJ/slWfLFir+9wM1GorxElSx4mxOIC/Pop0Wx5O2hESw+qkMas9QVlRS5KxRSzyaVaUe4h6LCiU9sba0WEkhqNZp78ZWkffkG2gLhDe4sNfLq5TQ4UYTG66chJHl0a/JZf2tUxHIUzki6b412zZBhDjpmSuuvNowdLZvPOdgAQQEWE2UJlMDgeHYdsygMkq1BwQmNHzb0j1W9CmUP5oQ0SzYa/p90HcvQamfCrp2jxoXHnNFYq1L2D9cxpUvkZ/t6XbzzD/9rZytlZJwiWSPPQv0Djp4Fl9EBAAA="
      },
      "Metadata": {
        "aws:cdk:path": "MysqldatabaseStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Outputs": {
    "dbUsername": {
      "Value": "mydbuser"
    },
    "dbName": {
      "Value": "mydb"
    },
    "vpcId": {
      "Value": {
        "Ref": "vpcA2121C38"
      }
    },
    "dbHost": {
      "Value": {
        "Fn::GetAtt": [
          "rds3515897F",
          "Endpoint.Address"
        ]
      }
    },
    "dbSecurityGroup": {
      "Value": {
        "Fn::GetAtt": [
          "MysqldatabaseStackDbSecurityGroup322BE505",
          "GroupId"
        ]
      }
    },
    "secretArn": {
      "Value": {
        "Ref": "MysqldatabaseStackdbSecret751CD9E9"
      }
    },
    "secretId": {
      "Value": {
        "Fn::Join": [
          "-",
          [
            {
              "Fn::Select": [
                0,
                {
                  "Fn::Split": [
                    "-",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "MysqldatabaseStackdbSecret751CD9E9"
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            },
            {
              "Fn::Select": [
                1,
                {
                  "Fn::Split": [
                    "-",
                    {
                      "Fn::Select": [
                        6,
                        {
                          "Fn::Split": [
                            ":",
                            {
                              "Ref": "MysqldatabaseStackdbSecret751CD9E9"
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        ]
      }
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
